--- a/data_analysis_pandas/create_load_select_data/select_columnns.ipynb
+++ b/data_analysis_pandas/create_load_select_data/select_columnns.ipynb
@@ -2,10 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "      month  clinic_east  clinic_north  clinic_south  clinic_west\n",
+      "0   January          100           100            23          100\n",
+      "1  February           51            45           145           45\n",
+      "2     March           81            96            65           96\n",
+      "3     April           80            80            54          180\n",
+      "4       May           51            54            54          154\n",
+      "5      June          112           109            79          129\n",
+      "\n",
+      "Selecting Multiple Columns\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "   clinic_north  clinic_south\n",
+      "0           100            23\n",
+      "1            45           145\n",
+      "2            96            65\n",
+      "3            80            54\n",
+      "4            54            54\n",
+      "5           109            79\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame([\n",
+    "    [\"January\", 100, 100, 23, 100],\n",
+    "    [\"February\", 51, 45, 145, 45],\n",
+    "    [\"March\", 81, 96, 65, 96],\n",
+    "    [\"April\", 80, 80, 54, 180],\n",
+    "    [\"May\", 51, 54, 54, 154],\n",
+    "    [\"June\", 112, 109, 79, 129]\n",
+    "],\n",
+    "columns=[\"month\", \"clinic_east\", \"clinic_north\", \"clinic_south\", \"clinic_west\"])\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Creating a variable clinic_north that contiains data from that clinic only\n",
+    "clinic_north = df.clinic_north\n",
+    "\n",
+    "# Printing the type of clinic_north\n",
+    "print(type(clinic_north))\n",
+    "\n",
+    "# Printing the type of df \n",
+    "print(type(df))\n",
+    "\n",
+    "print(df)\n",
+    "\n",
+    "\"\"\" Selecting Multiple Columns \"\"\"\n",
+    "print(\"\\nSelecting Multiple Columns ---->\")\n",
+    "\n",
+    "clinic_north_south = df[[\"clinic_north\", \"clinic_south\"]]\n",
+    "print(type(clinic_north_south))\n",
+    "print(clinic_north_south)"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +73,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.4"
   },
   "orig_nbformat": 4,
