adding notes to select multiple rows

--- a/data_analysis_pandas/select_rows.ipynb
+++ b/data_analysis_pandas/select_rows.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,22 @@
       "   month  clinic_east  clinic_north  clinic_south  clinic_west\n",
       "3  April           80            80            54          180\n",
       "4    May           51            54            54          154\n",
-      "5   June          112           109            79          129\n"
+      "5   June          112           109            79          129\n",
+      "\n",
+      "Selecting Rows with Logic I ---->\n",
+      "     month  clinic_east  clinic_north  clinic_south  clinic_west\n",
+      "0  January          100           100            23          100\n",
+      "\n",
+      "Selecting Rows with Logic II ---->\n",
+      "   month  clinic_east  clinic_north  clinic_south  clinic_west\n",
+      "2  March           81            96            65           96\n",
+      "3  April           80            80            54          180\n",
+      "\n",
+      "Selecting Rows with Logic ---->\n",
+      "      month  clinic_east  clinic_north  clinic_south  clinic_west\n",
+      "0   January          100           100            23          100\n",
+      "1  February           51            45           145           45\n",
+      "2     March           81            96            65           96\n"
      ]
     }
    ],
@@ -42,11 +57,36 @@
     "march = df.iloc[2]\n",
     "print(march)\n",
     "\n",
+    "\n",
     "\"\"\" Selecting Multiple Rows \"\"\"\n",
     "print(\"\\nSelecting Multiple Rows ---->\")\n",
     "\n",
     "april_may_june = df[-3:]\n",
-    "print(april_may_june)"
+    "print(april_may_june)\n",
+    "\n",
+    "\n",
+    "\"\"\" Selecting Rows with Logic \"\"\"\n",
+    "print(\"\\nSelecting Rows with Logic I ---->\")\n",
+    "# Creating a variable 'january' using a logical statement that will select\n",
+    "# the row of df where the 'month' column is 'January'\n",
+    "january = df[df.month == \"January\"]\n",
+    "print(january)\n",
+    "\n",
+    "\n",
+    "\"\"\" Selecting Rows with Logic \"\"\"\n",
+    "print(\"\\nSelecting Rows with Logic II ---->\")\n",
+    "# Creating a variable 'march_april', which contains the data from March and \n",
+    "# April.\n",
+    "march_april = df[(df.month == \"March\") | (df.month == \"April\")]\n",
+    "print(march_april)\n",
+    "\n",
+    "\n",
+    "\"\"\" Selecting Rows with Logic \"\"\"\n",
+    "print(\"\\nSelecting Rows with Logic ---->\")\n",
+    "# Creating the variable 'january_february_march' that contains the data from \n",
+    "# January, February, and March by using the .isin() command\n",
+    "january_february_march = df[df.month.isin([\"January\", \"February\", \"March\"])]\n",
+    "print(january_february_march)"
    ]
   }
  ],
