adding sample dataset

--- a/data_analysis_pandas/create_load_select_data/review.ipynb
+++ b/data_analysis_pandas/create_load_select_data/review.ipynb
@@ -56,7 +56,7 @@
     "# Loading the data from shoefly.csv into the variable orders. \n",
     "orders = pd.read_csv(\"../create_load_select_data/example_datasets/shoefly.csv\")\n",
     "\n",
-    "# Inspecting the first 5 linnes of the data.\n",
+    "# Inspecting the first 5 lines of the data.\n",
     "# print(orders.head())\n",
     "\n",
     "# Selecting email addresses from the column email and saving to 'emails'\n",
@@ -64,7 +64,7 @@
     "emails = orders.email\n",
     "# print(emails)\n",
     "\n",
-    "# Using loginc to select row 'orders' and saving to 'frances_palmer' \n",
+    "# Using logic to select row 'orders' and saving to 'frances_palmer' \n",
     "print(\"\\nGetting the row with Frances Palmers' Order ---->\")\n",
     "frances_palmer = [[orders[(orders.first_name == \"Frances\") & (orders.last_name == \"Palmer\")]]]\n",
     "print(frances_palmer)\n",
