update notes/add petal power project

--- a/data_analysis_pandas/create_load_select_data/create_a_dictionary_dataframe.ipynb
+++ b/data_analysis_pandas/create_load_select_data/create_a_dictionary_dataframe.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -13,7 +13,23 @@
       "0           1      t-shirt   blue\n",
       "1           2      t-shirt  green\n",
       "2           3        shirt    red\n",
-      "3           4        skirt  black\n"
+      "3           4        skirt  black\n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4 entries, 0 to 3\n",
+      "Data columns (total 3 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   Product ID    4 non-null      int64 \n",
+      " 1   Product Name  4 non-null      object\n",
+      " 2   Color         4 non-null      object\n",
+      "dtypes: int64(1), object(2)\n",
+      "memory usage: 224.0+ bytes\n",
+      "None\n",
+      "\n",
+      "\n",
+      "(4, 3)\n"
      ]
     }
    ],
@@ -26,7 +42,15 @@
     "    'Color': [\"blue\", \"green\", \"red\", \"black\"]\n",
     "})\n",
     "\n",
-    "print(df1)"
+    "print(df1)\n",
+    "\n",
+    "\"\"\" Using .info() \"\"\"\n",
+    "print(\"\\n\")\n",
+    "print(df1.info())\n",
+    "\n",
+    "\"\"\" Using .shape \"\"\"\n",
+    "print(\"\\n\")\n",
+    "print(df1.shape)"
    ]
   }
  ],
