--- a/data_analysis_pandas/create_load_select_data/select_columns.ipynb
+++ b/data_analysis_pandas/create_load_select_data/select_columns.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
       "      month  clinic_east  clinic_north  clinic_south  clinic_west\n",
       "0   January          100           100            23          100\n",
       "1  February           51            45           145           45\n",
@@ -19,7 +17,20 @@
       "4       May           51            54            54          154\n",
       "5      June          112           109            79          129\n",
       "\n",
-      "Selecting Multiple Columns\n",
+      "\n",
+      "0    100\n",
+      "1     45\n",
+      "2     96\n",
+      "3     80\n",
+      "4     54\n",
+      "5    109\n",
+      "Name: clinic_north, dtype: int64\n",
+      "\n",
+      "\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "\n",
+      "Selecting Multiple Columns ---->\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "   clinic_north  clinic_south\n",
       "0           100            23\n",
@@ -44,18 +55,19 @@
     "],\n",
     "columns=[\"month\", \"clinic_east\", \"clinic_north\", \"clinic_south\", \"clinic_west\"])\n",
     "\n",
-    "\n",
+    "print(df)\n",
+    "print(\"\\n\")\n",
     "\n",
     "# Creating a variable clinic_north that contiains data from that clinic only\n",
     "clinic_north = df.clinic_north\n",
+    "print(clinic_north)\n",
+    "print(\"\\n\")\n",
     "\n",
     "# Printing the type of clinic_north\n",
     "print(type(clinic_north))\n",
     "\n",
     "# Printing the type of df \n",
     "print(type(df))\n",
-    "\n",
-    "print(df)\n",
     "\n",
     "\"\"\" Selecting Multiple Columns \"\"\"\n",
     "print(\"\\nSelecting Multiple Columns ---->\")\n",
